--- a/Blogizm.WebUI/Views/Shared/Components/_UILayoutHeadComponentPartial/Default.cshtml
+++ b/Blogizm.WebUI/Views/Shared/Components/_UILayoutHeadComponentPartial/Default.cshtml
@@ -50,5 +50,16 @@
 		}
 
 		}
+		ul li a{
+			text-decoration:none;
+		}
+
+		.custom-img {
+			width: 100%;
+			height: 200px;
+			object-fit: contain;
+		}
+	
+
 	</style>
 </head>
