--- a/Blogizm.WebUI/Views/Default/Index.cshtml
+++ b/Blogizm.WebUI/Views/Default/Index.cshtml
@@ -6,42 +6,8 @@
 @await Component.InvokeAsync("_DefaultCarouselComponentPartial")
 @await Component.InvokeAsync("_DefaultTop3BlogSeriesComponentPartial")
 @await Component.InvokeAsync("_DefaultTop3GamesComponentPartial")
+@await Component.InvokeAsync("_DefaultTop3AnimesComponentPartial")
 
 
-
-<section class="section">
-	<div class="container">
-
-		<div class="row mb-4">
-			<div class="col-sm-6">
-				<h2 class="posts-entry-title">Anime</h2>
-			</div>
-			<div class="col-sm-6 text-sm-end"><a href="category.html" class="read-more">View All</a></div>
-		</div>
-
-		<div class="row">
-			<div class="col-lg-4 mb-4">
-				<div class="post-entry-alt">
-					<a href="single.html" class="img-link"><img src="/untree.co-blogy/images/img_7_horizontal.jpg" alt="Image" class="img-fluid"></a>
-					<div class="excerpt">
-
-
-						<h2><a href="single.html">Startup vs corporate: What job suits you best?</a></h2>
-						<div class="post-meta align-items-center text-left clearfix">
-							<figure class="author-figure mb-0 me-3 float-start"><img src="/untree.co-blogy/images/person_1.jpg" alt="Image" class="img-fluid"></figure>
-							<span class="d-inline-block mt-1">By <a href="#">David Anderson</a></span>
-							<span>&nbsp;-&nbsp; July 19, 2019</span>
-						</div>
-
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo sunt tempora dolor laudantium sed optio, explicabo ad deleniti impedit facilis fugit recusandae! Illo, aliquid, dicta beatae quia porro id est.</p>
-						<p><a href="#" class="read-more">Continue Reading</a></p>
-					</div>
-				</div>
-			</div>
-	
-		</div>
-
-	</div>
-</section>
 
 
