--- a/Blogizm.WebUI/Views/_ViewImports.cshtml
+++ b/Blogizm.WebUI/Views/_ViewImports.cshtml
@@ -6,4 +6,5 @@
 @using Blogizm.Dtos.ContactMessageDtos
 @using Blogizm.Dtos.BlogDtos
 @using Blogizm.Dtos.CategoryDtos
+@using Blogizm.Dtos.BlogDetailDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
